<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:paddingTop="@dimen/padding_xLarge"
            android:paddingBottom="@dimen/padding_small"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/stylingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/signInButton"
            style="@style/stylingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_small"
            android:fontFamily="casual"
            android:text="@string/login" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/stylingButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_small"
            android:fontFamily="@font/roboto_medium"
            android:paddingBottom="@dimen/padding_small"
            android:text="@string/newAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


    <!--        style="@style/style_text_1"-->


    <!--<LinearLayout-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:orientation="vertical"-->
    <!--    android:textAlignment="center">-->

    <!--    <TextView-->
    <!--        android:id="@+id/text_name"-->
    <!--        style="@style/style_text_1"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@={myName.name}"-->
    <!--        android:textAlignment="center" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/editTextPersonName"-->
    <!--        style="@style/style_text_1"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textAlignment="center"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/put_your_name"-->
    <!--        android:text="@={myName.nickname}"-->
    <!--        android:inputType="textPersonName" />-->

    <!--    <Button-->
    <!--        android:id="@+id/done_button"-->
    <!--        style="@style/Widget.AppCompat.Button.Colored"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="@dimen/top_margin"-->
    <!--        android:fontFamily="@font/roboto"-->
    <!--        android:layout_gravity="center_horizontal"-->
    <!--        android:text="@string/done" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/display_nickname_text"-->
    <!--        style="@style/style_text_1"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textAlignment="center"-->
    <!--        android:text="@={myName.nickname}"-->
    <!--        android:visibility="gone" />-->

    <!--    <ImageView-->
    <!--        android:id="@+id/star_image"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="@dimen/top_margin"-->
    <!--        android:contentDescription="@string/yellow_star"-->
    <!--        android:paddingTop="@dimen/top_padding"-->
    <!--        app:srcCompat="@android:drawable/btn_star_big_on"-->
    <!--        tools:ignore="ImageContrastCheck" />-->

    <!--    <ScrollView-->
    <!--        android:id="@+id/bio_scroll"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="vertical">-->

    <!--            <ImageView-->
    <!--                android:id="@+id/image_scroll"-->
    <!--                style="@style/Theme.AboutMe"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                app:srcCompat="@android:drawable/checkbox_on_background" />-->

    <!--            <TextView-->
    <!--                android:id="@+id/textView4"-->
    <!--                style="@style/style_text_1"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:lineSpacingMultiplier="1.2"-->
    <!--                android:paddingStart="@dimen/top_padding"-->
    <!--                android:paddingTop="@dimen/top_margin"-->
    <!--                android:paddingEnd="@dimen/top_padding"-->
    <!--                android:text="@string/bio" />-->
    <!--        </LinearLayout>-->
    <!--    </ScrollView>-->

    <!--    <Switch-->
    <!--        android:id="@+id/switch1"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Switch" />-->

    <!--</LinearLayout>-->
    <!--</layout>-->