<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.DetailFragment">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/topLabelText"
            style="@style/stylingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter__shoe_details"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Add New Shoe Information" />

        <TextView
            android:id="@+id/shoeNameText"
            style="@style/stylingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toStartOf="@id/editShoeName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Add New Shoe Information" />

        <EditText
            android:id="@+id/editShoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/shoe_name"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@id/editShoeCompany"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shoeNameText" />

        <EditText
            android:id="@+id/editShoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/company_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editShoeName" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editShoeCompany" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="285dp"
            android:layout_height="145dp"
            android:layout_marginTop="@dimen/padding_large"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <Button
            android:id="@+id/saveButton"
            style="@style/stylingButton"
            android:text="SAVE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/stylingButton"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="48dp"
            android:text="CANCEL"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBaseline_toBaselineOf="@+id/saveButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>